--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <button id="newnote" class="newnote">+</button>
 	<div id="board" class="board">
+        <!-- долдо -->
         
     </div>
 </body>
